# flight-delay-predictor

./: .gitignore  README.md  pyproject.toml
app/: streamlit_app.py
src/flight_delay/: __init__.py
src/flight_delay/data/: __main__.py  download.py  opensky.py  preprocess.py  synthetic.py  weather.py
src/flight_delay/features/: __init__.py  airport.py  pipeline.py  route.py  temporal.py  weather_features.py
src/flight_delay/models/: __init__.py  __main__.py  evaluate.py  explain.py  train.py
src/flight_delay/utils/: config.py
tests/: test_features.py  test_model.py  test_preprocess.py
