[project]
name = "flight-delay-predictor"
version = "0.1.0"
description = "ML pipeline predicting flight delays using aviation, weather & ADS-B data with SHAP explainability"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "shap>=0.45",
    "optuna>=3.5",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.18",
    "streamlit>=1.30",
    "pyarrow>=15.0",
    "requests>=2.31",
    "tqdm>=4.66",
    "holidays>=0.40",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "ruff>=0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flight_delay"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
